dm thang Quang2017

--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2H2T</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
-<script src="index.js"></script>
+    <header>
+      <img class="logo" src="https://my.vnpt.com.vn/logo.svg" alt="logo" width="40" height="40">
+    <nav>
+      <ul class="nav_links">
+        <li><a href="#">mm</a></li>
+        <li><a href="#">mm</a></li>
+        <li><a href="#">mm</a></li>
+      </ul>
+    </nav>
+    <a class="cta" href="#"><button>Discord</button></a>
+    </header>
+<img src="img/logo.png" alt="logo" class="centerlogo" >
+   
 
   </body>
 </html>
